--- a/Button1.html
+++ b/Button1.html
@@ -2,16 +2,15 @@
 
 <style>
 .flat-button {
-    background-color: #3498db;  /* Blue background */
-    color: white;               /* White text */
-    border: none;               /* No border */
-    padding: 12px 24px;         /* Button padding */
-    font-size: 16px;            /* Text size */
-    border-radius: 5px;         /* Rounded corners */
-    cursor: pointer;            /* Pointer on hover */
-    transition: background-color 0.3s ease;
+    background-color: #3498db;  
+    color: white;
+    border: none;
+    padding: 12px 24px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
 }
 .flat-button:hover {
-    background-color: #2980b9;  /* Darker blue on hover */
+    background-color: #2980b9;  
 }
 </style>
